hphp/test/slow/constant/nonexistent.php.expectf
Fatal error: Undefined constant 'MISSING1' in %s/nonexistent.php on line 3
